objects/Case.object
<CustomObject>
    <fields>
        <fullName>Email_Subject_Brand__c</fullName>
        <label>Email Subject Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RH</fullName>
                    <default>true</default>
                    <label>RH</label>
                </value>
                <value>
                    <fullName>RH Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH Contract</fullName>
                </value>
                <value>
                    <fullName>RH Teen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Thread_Id__c</fullName>
        <description>Calculates the thread Id that is used for Email-to-Case.</description>
        <formula>&quot;ref:_&quot;&amp;LEFT($Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT(Id,5)&amp;SUBSTITUTE(LEFT(RIGHT(Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(Id,5)&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The email thread Id that is used for Email-to-Case.</inlineHelpText>
        <label>Email Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>LastModifiedBy.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enter_Code_for_Ship_Via_Change__c</fullName>
        <label>Enter Code for Ship Via Change</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Distribution_Center__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Parcel Ground</fullName>
                </value>
                <value>
                    <fullName>2 - 2nd Day</fullName>
                </value>
                <value>
                    <fullName>3 - Next Day</fullName>
                </value>
                <value>
                    <fullName>4 - Truck</fullName>
                </value>
                <value>
                    <fullName>5 - HDL Mid-Tier Delivery</fullName>
                </value>
                <value>
                    <fullName>6 - HDL White Glove Delivery</fullName>
                </value>
                <value>
                    <fullName>9 - Priority Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_of_Packs_of_75_Requested__c</fullName>
        <label>Enter # of Packs of 75 Requested</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Freight_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Est. Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Est. Retail Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Approval_Rejection_Reason__c</fullName>
        <label>Exchange Approval Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Given in Error</fullName>
                </value>
                <value>
                    <fullName>Discount No Longer Needed</fullName>
                </value>
                <value>
                    <fullName>Discount Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Approval_Status__c</fullName>
        <label>Exchange Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Summary_Text__c</fullName>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <description>Expected Completion Date</description>
        <label>Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Requested_Percentage__c</fullName>
        <formula>IF(Flat_Rate_Accommodation_Amount__c &gt; 0,
IF(Use_Merchandise_Subtotal__c==True,
IF(Merchandise_Subtotal__c&gt;0,Flat_Rate_Accommodation_Amount__c/ Merchandise_Subtotal__c,IF(Total_Order_Amount__c&gt;0,Flat_Rate_Accommodation_Amount__c / Total_Order_Amount__c,NULL)),IF(Total_Order_Amount__c&gt;0,Flat_Rate_Accommodation_Amount__c / Total_Order_Amount__c,NULL)
), Original_Requested_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Requested Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flat_Rate_Accommodation_Amount__c</fullName>
        <inlineHelpText>Typical Accommodation amount is 10% of the line item not the total</inlineHelpText>
        <label>Requested Flat Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_home_delivery_pickup_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Furniture home delivery/pickup required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Processing_Date__c</fullName>
        <label>Future Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gallery_Designer__c</fullName>
        <description>Designer Services</description>
        <label>Gallery Designer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallery_Email__c</fullName>
        <label>Gallery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gallery_Number__c</fullName>
        <label>Gallery Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Box_Ribbon_Color__c</fullName>
        <label>Gift Box Ribbon Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Box_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Petal</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Ivory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Card_Request_Date__c</fullName>
        <inlineHelpText>Date/time of the request to create a gift card in CW for the related Order.</inlineHelpText>
        <label>Gift Card Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Status__c</fullName>
        <label>Gift Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grey_Card__c</fullName>
        <formula>IF(NOT( ISBLANK( Membership_ID__c )),

(HYPERLINK(&quot;/&quot; &amp; RH_Order_Number__r.Membership_ID_Lookup__c , IMAGE(&apos;/resource/1474409533000/RHMember&apos;, &quot;&quot;) , &quot;_self&quot;)),

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RH Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDL_DRS_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Contact at HDL in regards to DRS reported</description>
        <inlineHelpText>Name of Contact at HDL in regards to DRS reported</inlineHelpText>
        <label>HDL DRS Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HDL_Market_Name__c</fullName>
        <label>HDL Market Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 - BALTIMORE, MD</fullName>
                </value>
                <value>
                    <fullName>03 - BOSTON, MA</fullName>
                </value>
                <value>
                    <fullName>05 - AUSTIN, TX</fullName>
                </value>
                <value>
                    <fullName>06 - SEATTLE, WA</fullName>
                </value>
                <value>
                    <fullName>07 - NY/NJ (AVENAL)</fullName>
                </value>
                <value>
                    <fullName>08 - LA/SAN DIEGO</fullName>
                </value>
                <value>
                    <fullName>09 - GEORGIA</fullName>
                </value>
                <value>
                    <fullName>10 - LAKELAND, FL</fullName>
                </value>
                <value>
                    <fullName>11 - WESTON, FL</fullName>
                </value>
                <value>
                    <fullName>12 - SALT LAKE CITY, UT</fullName>
                </value>
                <value>
                    <fullName>13 - PORTLAND, OR</fullName>
                </value>
                <value>
                    <fullName>14 - LAS VEGAS, NV</fullName>
                </value>
                <value>
                    <fullName>15 - DENVER, CO</fullName>
                </value>
                <value>
                    <fullName>16 - CHICAGO, IL</fullName>
                </value>
                <value>
                    <fullName>17 - EDINA/ST. PAUL, MN</fullName>
                </value>
                <value>
                    <fullName>18 - PITTSBURGH, PA</fullName>
                </value>
                <value>
                    <fullName>19 - PHOENIX, AZ</fullName>
                </value>
                <value>
                    <fullName>21 - METAIRIE, LA</fullName>
                </value>
                <value>
                    <fullName>22 - SAN ANTONIO, TX</fullName>
                </value>
                <value>
                    <fullName>23 - BIRMINGHAM, AL</fullName>
                </value>
                <value>
                    <fullName>24 - WEST JEFFERSON, OH</fullName>
                </value>
                <value>
                    <fullName>25 - INDIANAPOLIS, IN</fullName>
                </value>
                <value>
                    <fullName>26 - LEAWOOD, MO</fullName>
                </value>
                <value>
                    <fullName>27 - NASHVILLE, TN</fullName>
                </value>
                <value>
                    <fullName>28 - ST. LOUIS, MO</fullName>
                </value>
                <value>
                    <fullName>29 - TROY, MI</fullName>
                </value>
                <value>
                    <fullName>30 - TULSA, OK</fullName>
                </value>
                <value>
                    <fullName>32 - EDMONTON, AB</fullName>
                </value>
                <value>
                    <fullName>33 - MONTREAL, QB</fullName>
                </value>
                <value>
                    <fullName>34 - VANCOUVER, BC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HDL_Market_Phone__c</fullName>
        <formula>IF(NOT(ISBLANK( Home_Delivery_Market__c )),  Home_Delivery_Market__r.Phone , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDL Market Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDL_Regional_Manager__c</fullName>
        <description>For use with Designer Services cases. Will bring in the Manager field from HDL Internal Account records.</description>
        <formula>IF(NOT(ISBLANK( Home_Delivery_Market__c )),  Home_Delivery_Market__r.Manager__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDL Regional Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDL_Return_Count__c</fullName>
        <inlineHelpText>The number of return items (Case Line Item records) that need to be returned to an HDL.</inlineHelpText>
        <label>HDL Return Count</label>
        <summaryFilterItems>
            <field>Case_Line_Items__c.Return_DC__c</field>
            <operation>equals</operation>
            <value>HDL</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HTTP_POST_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTTP POST In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazardous_Issue_Icon__c</fullName>
        <description>Used on Quality cases to indicate when an issue is created that is hazardous.</description>
        <formula>IF( Hazardous_Issue__c = TRUE,IMAGE(&apos;/servlet/servlet.FileDownload?file=015R0000000J45J&apos;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hazardous Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazardous_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_orders_items_single_delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold orders/ items for single delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Delivery_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Delivery Market</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select only an account that begins with &apos;HDL&apos;</errorMessage>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>HDL</value>
            </filterItems>
            <infoMessage>Please select only an account that begins with &apos;HDL&apos;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Home Delivery Market)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Images_etc__c</fullName>
        <label>Images, etc.</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>In_Progress_Start_Time__c</fullName>
        <description>Updated by the workflow rule &quot;Case Status to In Progress.&quot; Stamps the time when an agent accepts an Email and Web Inquiries Case.</description>
        <label>In Progress Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Progress_Team__c</fullName>
        <label>In Progress Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Review_Center__c</fullName>
        <description>Used by Email Advocates when Email and Web Inquiries cases require review by a center lead/supervisor. Users choose the appropriate center (Dallas, Ohio, or Tracy) and also must update the Status on the case to &quot;Ready for Review.&quot;</description>
        <label>In Review Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tracy</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection Request</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Cancellations</fullName>
                </value>
                <value>
                    <fullName>Ship Confirmation</fullName>
                </value>
                <value>
                    <fullName>Tracking</fullName>
                </value>
                <value>
                    <fullName>WISMO/ETA</fullName>
                </value>
                <value>
                    <fullName>Ship Via Change</fullName>
                </value>
                <value>
                    <fullName>In Source Cancellation</fullName>
                </value>
                <value>
                    <fullName>Monogramming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Delivery_Date__c</fullName>
        <description>Designer Services</description>
        <label>Install/Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <label>Install</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>FF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interim_Update__c</fullName>
        <label>Interim Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Add SKU in RP Details to Order </fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Contact Date Communicated</fullName>
                </value>
                <value>
                    <fullName>CSC Approved MOS/Exchange</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Merchant Approved MOS/Exchange </fullName>
                </value>
                <value>
                    <fullName>New Card Provided</fullName>
                </value>
                <value>
                    <fullName>Not a Replaceable Part</fullName>
                </value>
                <value>
                    <fullName>Order Cancel</fullName>
                </value>
                <value>
                    <fullName>Pending Client Action</fullName>
                </value>
                <value>
                    <fullName>Pending CSC Action</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Pending HDL Delivery</fullName>
                </value>
                <value>
                    <fullName>Ready for Callout</fullName>
                </value>
                <value>
                    <fullName>Re-run Card</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Resolved: No Contact</fullName>
                </value>
                <value>
                    <fullName>Resolved: Spoke to Client</fullName>
                </value>
                <value>
                    <fullName>Shipping to Client</fullName>
                </value>
                <value>
                    <fullName>Shipping to Home Office/ DC</fullName>
                </value>
                <value>
                    <fullName>SKU Setup</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Planning</fullName>
                </value>
                <value>
                    <fullName>Working with DC</fullName>
                </value>
                <value>
                    <fullName>Working with Merchant</fullName>
                </value>
                <value>
                    <fullName>Working with Vendor</fullName>
                </value>
                <value>
                    <fullName>Working with Vendor – Setting up SKU</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are no internal accounts with this criteria. Please check that you are entering the name correctly, then try again.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Shipped</fullName>
                </value>
                <value>
                    <fullName>Cannot Monogram</fullName>
                </value>
                <value>
                    <fullName>Invalid Ship Via</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Locked__c</fullName>
        <formula>IF(
OR(
 ISPICKVAL(Status ,&apos;Closed - Successful&apos;),
 ISPICKVAL(Status ,&apos;Closed - Unsuccessful&apos;),
 ISPICKVAL(Status ,&apos;Closed - Invalid&apos;),
 ISPICKVAL(Status ,&apos;Closed - Created in Error&apos;)),true,false)</formula>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Bath Hardware</fullName>
                </value>
                <value>
                    <fullName>Cabinet Hardware</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarding</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Short Shipped</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
                <value>
                    <fullName>WISMO</fullName>
                </value>
                <value>
                    <fullName>Wrong Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Items_Shipped_Ahead_of_Install__c</fullName>
        <description>Designer Services</description>
        <label>Items Shipped Ahead of Install</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lifetime_Value__c</fullName>
        <description>Estimated Life Time Value of the Client</description>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total_Accommodations__c</fullName>
        <inlineHelpText>This field is automatically calculated and shows the total accommodation amount for all case line items</inlineHelpText>
        <label>Requested Line Item Total Accommodations</label>
        <summarizedField>Case_Line_Items__c.Line_Item_Accommodation_Amount__c</summarizedField>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>List_order_numbers_for_single_delivery__c</fullName>
        <label>List order numbers for single delivery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Information__c</fullName>
        <label>Location of Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>CW (IM10, DIAV)</fullName>
                </value>
                <value>
                    <fullName>Product Library</fullName>
                </value>
                <value>
                    <fullName>Wiki</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Consulted with Leadership</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Billing_Summary_Reason__c</fullName>
        <label>Manual Billing Summary Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation or Refund on Separate Orders</fullName>
                </value>
                <value>
                    <fullName>Hybrid BOM SKUs</fullName>
                </value>
                <value>
                    <fullName>MC or Balance Transfers</fullName>
                </value>
                <value>
                    <fullName>Net Billing Orders</fullName>
                </value>
                <value>
                    <fullName>Non-Credit Card Payments</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill Refunds at Line Level</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed Deposits</fullName>
                </value>
                <value>
                    <fullName>Mail/Fax Needed</fullName>
                </value>
                <value>
                    <fullName>Missing Invoices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_HDL__c</fullName>
        <label>Manual HDL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Auto_Renewal_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the related Order on this Credit Card Decline case only has Membership Auto Renewal SKU Order Lines.</description>
        <inlineHelpText>If checked, the related Order on this Credit Card Decline case only has Membership Auto Renewal SKU Order Lines.</inlineHelpText>
        <label>Membership Auto Renewal Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <label>Membership ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise_Subtotal__c</fullName>
        <label>Merchandise Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_Indicator__c</fullName>
        <formula>IMAGE(
CASE(Milestone_Status__c,&quot;Completed&quot;,&quot;/resource/1406048462000/Green_Indicator&quot;, &quot;Open Violation&quot;, &quot;/resource/1406048462000/Red_Indicator&quot;,&quot;Warning&quot;,&quot;/resource/1406048462000/Yellow_Indicator&quot;,&quot;Closed Violation&quot;,&quot;/resource/1406048462000/Yellow_Indicator&quot;,&quot;/resource/1406048462000/Green_Indicator&quot;),&quot;Case Indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Violated_Sort__c</fullName>
        <formula>IF(Milestone_Violated__c, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Violated Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Violated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked when a Milestone is violated</description>
        <label>Milestone Violated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Warning_Monitor__c</fullName>
        <formula>IF( Warning__c , IMAGE(&apos;https://cs2.salesforce.com/resource/1405528310000/MilestoneWarning&apos;,&apos;&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Warning Monitor</label>
        <type>Text</type>
    </fields>
</CustomObject>